deploy/kustomize/base/accounts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accounts
  namespace: accounts
  labels:
    app.kubernetes.io/name: accounts
    app.kubernetes.io/part-of: devops-capstone
spec:
  ingressClassName: nginx
  rules:
    - host: customer-account.api.JeremyCloudLabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: accounts
                port:
                  number: 8080
